2013-01-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Extend -Wno-trampolines to host.

2013-01-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/iso9660.c (grub_iso9660_susp_iterate): Avoid hang if
	entry->len = 0.

2013-01-03  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Invoking grub-mkrelpath): New section.
	(Invoking grub-script-check): Likewise.

2013-01-03  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Invoking grub-mount): New section.
	Reported by: Filipus Klutiero.  Fixes Debian bug #666427.

2013-01-02  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/tests/lib/test.c (grub_test_run): Return non-zero on
	test failures, so that a failing unit test correctly causes 'make
	check' to fail.

2013-01-02  Colin Watson  <cjwatson@ubuntu.com>

	Fix failing printf test.

	* grub-core/kern/misc.c (grub_vsnprintf_real): Parse '-', '.', and
	'$' in the correct order when collecting type information.

2013-01-02  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (configfile): Explain environment variable
	handling.
	(source): New section.
	Reported by: Arbiel Perlacremaz.  Fixes Savannah bug #35564.

2012-12-31  Colin Watson  <cjwatson@ubuntu.com>

	Remove several trivially-unnecessary uses of nested functions.

	* grub-core/commands/i386/pc/sendkey.c
	(grub_cmd_sendkey: find_key_code, find_ascii_code): Make static
	instead of nested.
	* grub-core/commands/legacycfg.c (legacy_file: getline): Likewise.
	Rename to ...
	(legacy_file_getline): ... this.
	* grub-core/commands/loadenv.c (grub_cmd_load_env: set_var):
	Likewise.
	* grub-core/kern/corecmd.c (grub_core_cmd_set: print_env): Likewise.
	* grub-core/kern/fs.c (grub_fs_probe: dummy_func): Likewise.  Rename
	to ...
	(probe_dummy_iter): ... this.
	* grub-core/kern/i386/coreboot/mmap.c
	(grub_linuxbios_table_iterate: check_signature): Likewise.
	* grub-core/kern/parser.c (grub_parser_split_cmdline:
	check_varstate): Likewise.  Mark inline.