@@ -1,3 +1,8 @@
+2013-01-03  Yuta Satoh  <nigoro>
+
+	* util/grub.d/10_kfreebsd.in: Fix improper references to grub-probe by
+	${grub_probe}
+
 2013-01-03  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* configure.ac: Extend -Wno-trampolines to host.
